test-crates/duchess-java-tests/tests/ui/type_mismatch_bad_argument_type_in_decl.stderr
error: error in class `type_mismatch.TakesInt`: method `take(long)` does not match any of the methods in the reflected class: take(int)
 --> tests/ui/type_mismatch_bad_argument_type_in_decl.rs:6:5
  |
6 |     public class TakesInt {
  |     ^^^^^^

error: aborting due to 1 previous error

